Page menu note enchantee créée

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <header>
+    <header class="bandeau_page_principale">
         <div>
             <h1>
                 ohmyfood
@@ -30,16 +30,18 @@
         </div>
     </header>
 
-    <section class="choix-menu">
+    <section class="bloc_central">
         <div class="menu-note-enchantee">
             <div class="element-menu">
-                <i class="fas fa-music"></i>
-                <p>
-                    La note enchantée
-                </p>
-                <h3>
-                    MENU
-                </h3>
+                <a href="./lanoteenchantee.html" target="blank">
+                    <i class="fas fa-music"></i>
+                    <p>
+                        La note enchantée
+                    </p>
+                    <h3>
+                        MENU
+                    </h3>
+                </a>
             </div>
         </div>
 
@@ -80,6 +82,10 @@
     <section>
         <div class="bouton-prochainement">
             Prochainement
+            <span class="point_1">.</span>
+            <span class="point_2">.</span>
+            <span class="point_3">.</span>
+            
         </div>
         
     </section>
