--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -51,36 +51,36 @@
                 <p>
                     Ravioles de foie gras accompagnés de leur crème à la truffe
                 </p>
-                <span>
+                <p>
                     98€
-                </span>
+                </p>
             </div>
 
             <div>
                 <p>
                     Caviar osciètre sur blini à la farine de blé noir
                 </p>
-                <span>
+                <p>
                     115€
-                </span>
+                </p>
             </div>
 
             <div>
                 <p>
                     Homard et espuma de potiron mariné aux zests d'orange
                 </p>
-                <span>
+                <p>
                     89€
-                </span>
+                </p>
             </div>
 
             <div>
                 <p>
                     Foie gras de canard cuit entier, confiture de figue et pain toasté
                 </p>
-                <span>
+                <p>
                     105€
-                </span>
+                </p>
             </div>
         </article>
         <!-- Titre plat -->
@@ -101,27 +101,27 @@
                 <p>
                     Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave
                 </p>
-                <span>
+                <p>
                     102€
-                </span>
+                </p>
             </div>
 
             <div>
                 <p>
                     Langoustine pôelée, purée de patate douce
                 </p>
-                <span>
+                <p>
                     205€
-                </span>
+                </p>
             </div>
 
             <div>
                 <p>
                     Mijoté de queue de boeuf et riz sauvage aux zests de citron
                 </p>
-                <span>
+                <p>
                     169€
-                </span>
+                </p>
             </div>
         </article>
         <!-- Titre dessert -->
@@ -158,7 +158,7 @@
         </article>
 
         <!-- Titre fin -->
-        <div>
+        <div class="titre_footer">
             <h3>
                 <i class="fas fa-music"></i>
                 La note enchantée
