Note enchantee fini + début chic à la française

--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
 
         <div class="menu-chic-francaise">
             <div class="element-menu">
-                <p>
-                    Le chic à la française
-                </p>
-                <h3>
-                    Menu
-                </h3>
+                <a href="./lechicalafrancaise.html" target="blank">
+                    <p>
+                        Le chic à la française
+                    </p>
+                    <h3>
+                        Menu
+                    </h3>
+                </a>
             </div>
         </div>
 
@@ -93,7 +95,7 @@
     <footer>
         
         <div class="mentions-légales">
-            <a href="./mentions_légales.html "target="blank">
+            <a href="./mentions_légales.html" target="blank">
                 Mentions légales
             </a>
         </div>
