--- a/lechicalafrancaise.html
+++ b/lechicalafrancaise.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
 
-    <title>Menu || La note enchantée</title>
+    <title>Menu || Le chic à la Française</title>
     
 </head>
 
@@ -31,19 +31,19 @@
         </div>
     </header>
     <!-- ELEMENT CENTRAL -->
-    <section class="conteneur__note-enchantée">
+    <section class="conteneur__chic-francaise">
         <div class="titre_conteneur">
             <div>
                 <i class="fas fa-music"></i>
             </div>
             <div>
                 <h1>
-                    La note enchantée
+                    Le chic à la Française
                 </h1>
             </div>
         </div>
         <!-- Titre entrée -->
-        <div class="titre_menu__note-enchantée">
+        <div class="titre_menu__chic-francaise">
             <div>
                 <img src="./img/barre.png" alt="trait séparation"/>
             </div>
