Animation trois points done

--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Ohmyfood! est une entreprise de réservation de restaurants et de composition de menus en ligne. Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte !">
-    
-    <!-- LIEN INTERNE -->
-    <link rel="stylesheet" href="style.css">
 
     <!-- POLICE --> 
     <link href="https://fonts.googleapis.com/css2?family=Devonshire&display=swap" rel="stylesheet">
@@ -15,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+
+    <!-- LIEN INTERNE -->
+    <link rel="stylesheet" href="./style.css">
 
     <title>Oh my food</title>
     
@@ -83,7 +83,9 @@
 
     <section>
         <div class="bouton-prochainement">
-            Prochainement
+           <span>
+               Prochainement
+            </span>
             <span class="point_1">.</span>
             <span class="point_2">.</span>
             <span class="point_3">.</span>
