--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Ohmyfood! est une entreprise de réservation de restaurants et de composition de menus en ligne. Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte !">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <meta name="description" content="Ohmyfood! est une entreprise de réservation de restaurants et de composition de menus en ligne. Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte !"/>
     
-    <!-- LIEN INTERNE -->
-    <link rel="stylesheet" href="style.css">
-
     <!-- POLICE --> 
-    <link href="https://fonts.googleapis.com/css2?family=Devonshire&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Devonshire&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet"/>
+
+    <!-- LIEN INTERNE -->
+    <link rel="stylesheet" href="./style.css"/>
 
     <title>Menu || La note enchantée</title>
     
@@ -26,7 +26,7 @@
     <header class="bandeau_page_principale">
         <div>
             <h1>
-               <a href="index.html">ohmyfood</a>
+               <a href="./index.html">ohmyfood</a>
             </h1>
         </div>
     </header>
