Chic à la francaise fini et ajout dossier sass

--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
 
         <div class="menu-delice-papilles">
             <div class="element-menu">
-                <p>
-                    Le délice des papilles
-                </p>
-                <h3>
-                    Menu
-                </h3>
+                <a href="./ledelicedespapilles.html">
+                    <p>
+                        Le délice des papilles
+                    </p>
+                    <h3>
+                        Menu
+                    </h3>
+                </a>
             </div>
         </div>
 
