--- a/lechicalafrancaise.html
+++ b/lechicalafrancaise.html
@@ -41,13 +41,13 @@
         <!-- Titre entrée -->
         <div class="titre_menu__chic-francaise bloc_entree--couleur">
             <div>
-                <img src="./img/barre.png" alt="trait séparation"/>
+                <img src="./img/barre-menu-francaise-orange.png" alt="trait séparation"/>
             </div>
             <h3>
                 Pour se mettre en appétit
             </h3>
             <div>
-                <img src="./img/barre.png" alt="trait séparation"/>
+                <img class="fleche" src="./img/barre-menu-francaise-orange.png" alt="trait séparation"/>
             </div>
         </div>
     
@@ -84,13 +84,13 @@
         <!-- Titre plat -->
         <div class="titre_menu__chic-francaise bloc_plat--couleur">
             <div>
-                <img src="./img/barre.png" alt="trait séparation"/>
+                <img src="./img/barre-menu-francaise-rose.png" alt="trait séparation"/>
             </div>
             <h3>
                 Plaisir des papilles
             </h3>
             <div>
-                <img src="./img/barre.png" alt="trait séparation"/>
+                <img class="fleche" src="./img/barre-menu-francaise-rose.png" alt="trait séparation"/>
             </div>
         </div>
             <!-- Détail plat -->
@@ -126,13 +126,13 @@
         <!-- Titre dessert -->
         <div class="titre_menu__chic-francaise bloc_dessert--couleur">
             <div>
-                <img src="./img/barre.png" alt="trait séparation"/>
+                <img src="./img/barre-menu-francaise-violet.png" alt="trait séparation"/>
             </div>
             <h3>
                 Gourmandises sucrées
             </h3>
             <div>
-                <img src="./img/barre.png" alt="trait séparation"/>
+                <img class="fleche" src="./img/barre-menu-francaise-violet.png" alt="trait séparation"/>
             </div>
         </div>
         <!-- Détail dessert -->
