--- a/index.html
+++ b/index.html
@@ -73,12 +73,14 @@
 
         <div class="menu-palette-goût">
             <div class="element-menu">
-                <p>
-                    La palette du goût
-                </p>
-                <h3>
-                    Menu
-                </h3>
+                <a href="./lapalettedugout.html">
+                    <p>
+                        La palette du goût
+                    </p>
+                    <h3>
+                        Menu
+                    </h3>
+                </a>
             </div>
         </div>
     </section>
