--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -17,7 +17,7 @@
     <!-- LIEN INTERNE -->
     <link rel="stylesheet" href="./style.css"/>
 
-    <title>Menu || Le délice des papilles</title>
+    <title>Menu || La palette du goût</title>
     
 </head>
 
@@ -31,123 +31,31 @@
         </div>
     </header>
     <!-- ELEMENT CENTRAL -->
-    <section class="conteneur__délice-papilles">
+    <section class="conteneur__palette-gout">
         <div class="titre_conteneur">
             <div>
                 <h1>
-                    Le délice des papilles
+                    La palette du goût
                 </h1>
             </div>
         </div>
         <!-- Titre entrée -->
-        <div class="titre_menu__délice-papilles">
+        <div class="titre_menu__palette-gout">
             <div>
-                <img src="./img/barre-menu-papilles-bleu-foncé.png" alt="trait séparation"/>
+                <img src="./img/barre-menu-palette.png" alt="trait séparation"/>
             </div>
             <h3 class="bloc--entree">
-                Pour bien commencer
+                Esquisse
             </h3>
             <div>
-                <img class="fleche" src="./img/barre-menu-papilles-bleu-foncé.png" alt="trait séparation"/>
+                <img class="fleche" src="./img/barre-menu-palette.png" alt="trait séparation"/>
             </div>
         </div>
         <!-- Détail entrée -->
         <div class="menu_description">
             <div>
                 <p>
-                    Tartare de thon assaisonné au yuzu
-                </p>
-                <p class="prix">
-                    55€
-                </p>
-            </div>
-
-            <div>
-                <p>
-                    Bouchée de homard croustillant et sa farandole de petits légumes
-                </p>
-                <p class="prix">
-                    89€
-                </p>
-            </div>
-
-            <div>
-                <p>
-                    Velouté de cèpes aux truffes
-                </p>
-                <p class="prix">
-                    56€
-                </p>
-            </div>
-        </div>
-
-        <!-- Titre plat -->
-        <div class="titre_menu__délice-papilles">
-            <div>
-                <img src="./img/barre-menu-papilles-bleu.png" alt="trait séparation"/>
-            </div>
-            <h3 class="bloc--plat">
-                Pour bien continuer
-            </h3>
-            <div>
-                <img class="fleche" src="./img/barre-menu-papilles-bleu.png" alt="trait séparation"/>
-            </div>
-        </div>
-        <!-- Détail plat -->
-        <div class="menu_description">
-            <div>
-                <p>
-                    Poulet rôti aux herbes de provence et sa crème de truffe
-                </p>
-                <p class="prix">
-                    110€
-                </p>
-            </div>
-
-            <div>
-                <p>
-                    Langouste rôtie et ses légumes de saison
-                </p>
-                <p class="prix">
-                    225€
-                </p>
-            </div>
-
-            <div>
-                <p>
-                    Côte de boeuf angus et sa purée de panais
-                </p>
-                <p class="prix">
-                    115€
-                </p>
-            </div>
-        </div>
-        <!-- Titre dessert -->
-        <div class="titre_menu__délice-papilles">
-            <div>
-                <img src="./img/barre-menu-papilles-bleu-clair.png" alt="trait séparation"/>
-            </div>
-            <h3 class="bloc--dessert">
-                Pour bien terminer
-            </h3>
-            <div>
-                <img class="fleche" src="./img/barre-menu-papilles-bleu-clair.png" alt="trait séparation"/>
-            </div>
-        </div>
-        <!-- Détail dessert -->
-        <div class="menu_description">
-            <div>
-                <p>
-                    Farandole de dessert du chef
-                </p>
-                <p class="prix">
-                    55€
-                </p>
-            </div>
-
-            <div>
-                <p>
-                    Crème brulée revisitée
+                    Fricassée d'escargot au piment d'espelette
                 </p>
                 <p class="prix">
                     60€
@@ -156,10 +64,102 @@
 
             <div>
                 <p>
-                    Tiramisu à la noisette
+                    Oeuf au plat assaisonné à la truffe sur lit de caviar
                 </p>
                 <p class="prix">
                     55€
+                </p>
+            </div>
+
+            <div>
+                <p>
+                    Foie gras de canard mi-cuit et ses copeaux de truffe noire
+                </p>
+                <p class="prix">
+                    65€
+                </p>
+            </div>
+        </div>
+
+        <!-- Titre plat -->
+        <div class="titre_menu__palette-gout">
+            <div>
+                <img src="./img/barre-menu-palette.png" alt="trait séparation"/>
+            </div>
+            <h3 class="bloc--plat">
+                Oeuvre de maître
+            </h3>
+            <div>
+                <img class="fleche" src="./img/barre-menu-palette.png" alt="trait séparation"/>
+            </div>
+        </div>
+        <!-- Détail plat -->
+        <div class="menu_description">
+            <div>
+                <p>
+                    Filet de boeuf aux herbes accompagné de sa ribambelle de légumes
+                </p>
+                <p class="prix">
+                    70€
+                </p>
+            </div>
+
+            <div>
+                <p>
+                    Parmentier de queue de boeuf à la truffe noire sur sa purée de panais
+                </p>
+                <p class="prix">
+                    85€
+                </p>
+            </div>
+
+            <div>
+                <p>
+                    Filet de Turbot aux agrumes
+                </p>
+                <p class="prix">
+                    125€
+                </p>
+            </div>
+        </div>
+        <!-- Titre dessert -->
+        <div class="titre_menu__palette-gout">
+            <div>
+                <img src="./img/barre-menu-palette.png" alt="trait séparation"/>
+            </div>
+            <h3 class="bloc--dessert">
+                Au sommet de l'art
+            </h3>
+            <div>
+                <img class="fleche" src="./img/barre-menu-palette.png" alt="trait séparation"/>
+            </div>
+        </div>
+        <!-- Détail dessert -->
+        <div class="menu_description">
+            <div>
+                <p>
+                    Paris-Brest revisité
+                </p>
+                <p class="prix">
+                    55€
+                </p>
+            </div>
+
+            <div>
+                <p>
+                    Macaron au chocolat d'exception et glace à la vanille de Madagascar
+                </p>
+                <p class="prix">
+                    65€
+                </p>
+            </div>
+
+            <div>
+                <p>
+                    Mousse au chocolat au piment d'espelette et à la truffe noire
+                </p>
+                <p class="prix">
+                    60€
                 </p>
             </div>
         </div>
