--- a/ledelicedespapilles.html
+++ b/ledelicedespapilles.html
@@ -42,13 +42,13 @@
         <!-- Titre entrée -->
         <div class="titre_menu__délice-papilles">
             <div>
-                <img src="./img/barre-menu-papilles-bleu-foncé.png" alt="trait séparation"/>
+                <img src="./img/barre-menu-papilles-bleu-fonce.png" alt="trait séparation"/>
             </div>
             <h3 class="bloc--entree">
                 Pour bien commencer
             </h3>
             <div>
-                <img class="fleche" src="./img/barre-menu-papilles-bleu-foncé.png" alt="trait séparation"/>
+                <img class="fleche" src="./img/barre-menu-papilles-bleu-fonce.png" alt="trait séparation"/>
             </div>
         </div>
         <!-- Détail entrée -->
