--- a/ledelicedespapilles.html
+++ b/ledelicedespapilles.html
@@ -168,8 +168,8 @@
 
     <footer>
         
-        <div class="mentions-légales">
-            <a href="./mentions_légales.html" target="blank">
+        <div class="mentions-legales">
+            <a href="mentions_legales.html" target="blank">
                 Mentions légales
             </a>
         </div>
